--- a/site_devWeb_2tri_definitivo/site dev web 2 trimestre definitivo/index.html
+++ b/site_devWeb_2tri_definitivo/site dev web 2 trimestre definitivo/index.html
@@ -25,9 +25,16 @@
         </nav>
     </header>
    
-    <main></main>
+    <main>
+        <div id="noticiaImg"></div>
+        <div id="noticiaImg"></div>
+        <div id="noticiaImg"></div>
+        <div id="noticiaImg"></div>
+    </main>
     <aside></aside>
-    <footer></footer>
+    <footer>
+        <p id="txtFooter">Todos os direitos reservados © 2023</p>
+    </footer>
    </div>
 
 </body>
