--- a/site_devWeb_2tri_definitivo/site dev web 2 trimestre definitivo/index.html
+++ b/site_devWeb_2tri_definitivo/site dev web 2 trimestre definitivo/index.html
@@ -26,10 +26,23 @@
     </header>
    
     <main>
-        <div id="noticiaImg"></div>
-        <div id="noticiaImg"></div>
-        <div id="noticiaImg"></div>
-        <div id="noticiaImg"></div>
+        <div id="noticiaImg">
+            <img src="" alt="">
+        </div>  
+        <div id="noticiaImg">
+            <img src="" alt="">
+        </div>
+        <div id="noticiaImg">
+            <img src="" alt=""></div> 
+        <div id="noticiaImg">
+            <img src="" alt="">
+        </div>
+        <div id="noticiaImg">
+            <img src="" alt="">
+        </div> 
+        <div id="noticiaImg">
+            <img src="" alt="">
+        </div>
     </main>
     <aside></aside>
     <footer>
