--- a/site_devWeb_2tri_definitivo/site dev web 2 trimestre definitivo/index.html
+++ b/site_devWeb_2tri_definitivo/site dev web 2 trimestre definitivo/index.html
@@ -27,21 +27,21 @@
    
     <main>
         <div id="noticiaImg">
-            <img src="" alt="">
+            <img id="imgMain" src="" alt="">
         </div>  
         <div id="noticiaImg">
-            <img src="" alt="">
+            <img id="imgMain" src="" alt="">
         </div>
         <div id="noticiaImg">
-            <img src="" alt=""></div> 
+            <img id="imgMain" src="" alt=""></div> 
         <div id="noticiaImg">
-            <img src="" alt="">
+            <img id="imgMain" src="" alt="">
         </div>
         <div id="noticiaImg">
-            <img src="" alt="">
+            <img id="imgMain" src="" alt="">
         </div> 
         <div id="noticiaImg">
-            <img src="" alt="">
+            <img id="imgMain" src="" alt="">
         </div>
     </main>
     <aside></aside>
