--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
    <div class="container">
 
     <header>
-        <div><img id="logo" src="img/logo/JJ-preview.png" alt="logo"></div>
+        <div><img id="logo" src="img/logo/newLogo.png" alt="logo"></div>
         <div id="titulo">
-            <h1>Jornal Jornal</h1>
         </div>
         <nav>
             <a href="index.html">Inicio</a>
@@ -26,23 +25,25 @@
     </header>
    
     <main>
-        <div id="noticiaImg">
-            <img id="imgMain" src="" alt="">
-        </div>  
-        <div id="noticiaImg">
-            <img id="imgMain" src="" alt="">
-        </div>
-        <div id="noticiaImg">
-            <img id="imgMain" src="" alt=""></div> 
-        <div id="noticiaImg">
-            <img id="imgMain" src="" alt="">
-        </div>
-        <div id="noticiaImg">
-            <img id="imgMain" src="" alt="">
-        </div> 
-        <div id="noticiaImg">
-            <img id="imgMain" src="" alt="">
-        </div>
+        <section>
+            <div id="noticiaImg">
+                <img id="imgMain" src="img/noticias/f917eb3b5479be59de7b43006d37a7ae.webp" alt="">
+            </div>  
+            <div id="noticiaImg">
+                <img id="imgMain" src="" alt="">
+            </div>
+            <div id="noticiaImg">
+                <img id="imgMain" src="" alt=""></div> 
+            <div id="noticiaImg">
+                <img id="imgMain" src="" alt="">
+            </div>
+            <div id="noticiaImg">
+                <img id="imgMain" src="" alt="">
+            </div> 
+            <div id="noticiaImg">
+                <img id="imgMain" src="" alt="">
+            </div>
+        </section>
     </main>
     <aside></aside>
     <footer>
