--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jornal Jornal</title>
-    <link rel="stylesheet" href="estilo-main.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" href="img/logo/JJ-preview .ico
     " type="image/x-icon">
 </head>
@@ -16,18 +16,18 @@
         <div id="titulo">
         </div>
         <nav>
-            <a href="index.html">Inicio</a>
-            <a href="#">Pag 1</a>
-            <a href="#">Pag 2</a>
-            <a href="#">Pag 3</a>
-            <a href="#">Pag 4</a>
+            <a href="index.html">INÍCIO</a>
+            <a href="#">PÁGINA 1</a>
+            <a href="#">PÁGINA 2</a>
+            <a href="#">PÁGINA 3</a>
+            <a href="#">PÁGINA 4</a>
         </nav>
     </header>
    
     <main>
         <section>
             <div id="noticiaImg">
-                <img id="imgMain" src="img/noticias/f917eb3b5479be59de7b43006d37a7ae.webp" alt="">
+               <a href="notRobt.html"> <img id="imgMain" src="img/noticias/dest6.jpg" alt=""></a>
             </div>  
             <div id="noticiaImg">
                 <img id="imgMain" src="" alt="">
