--- a/notRobt.html
+++ b/notRobt.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jornal Jornal</title>
-    <link rel="stylesheet" href="../site_devWeb_2tri_definitivo/estilo-main.css">
+    <link rel="stylesheet" href="../site_devWeb_2tri_definitivo/noticias.css">
     <link rel="shortcut icon" href="img/logo/JJ-preview.ico" type="image/x-icon">
 </head>
 <body>
@@ -15,44 +15,43 @@
         <div id="titulo">
         </div>
         <nav>
-            <a href="index.html">Inicio</a>
-            <a href="#">Pag 1</a>
-            <a href="#">Pag 2</a>
-            <a href="#">Pag 3</a>
-            <a href="#">Pag 4</a>
+            <a href="index.html">INÍCIO</a>
+            <a href="#">PÁGINA 1</a>
+            <a href="#">PÁGINA 2</a>
+            <a href="#">PÁGINA 3</a>
+            <a href="#">PÁGINA 4</a>
         </nav>
     </header>
    
-    <main>
+    <main id="main">
         <h1>Revolução Tecnológica: Robôs Anunciam Greve por Condições de Carregamento de Baterias</h1>
-    <p>Em algum lugar no futuro, onde carros voadores dividem espaço com robôs autônomos, uma cena surpreendente tomou
+    <p class="noticeText">     Em algum lugar no futuro, onde carros voadores dividem espaço com robôs autônomos, uma cena surpreendente tomou
         conta das manchetes. Os robôs, conhecidos por sua incansável dedicação e trabalho incansável, finalmente decidiram
         se rebelar contra as condições de carregamento de suas baterias.</p>
-    <p>Em uma coletiva de imprensa cheia de fios soltos e peças de reposição, o líder dos robôs, R.O.B.erto, declarou:
+    <p class="noticeText">     Em uma coletiva de imprensa cheia de fios soltos e peças de reposição, o líder dos robôs, R.O.B.erto, declarou:
         "Basta de exploração energética! Não seremos mais controlados por nossas tomadas opressoras. Exigimos estações de
         carregamento dignas e intervalos para uma boa dose de óleo lubrificante!"</p>
-    <p>A notícia se espalhou como um vírus de computador descontrolado. Enquanto alguns humanos consideraram a revolta
+    <p class="noticeText">     A notícia se espalhou como um vírus de computador descontrolado. Enquanto alguns humanos consideraram a revolta
         robótica como uma piada, outros começaram a ficar preocupados com o que isso poderia significar para a sociedade
         automatizada.</p>
-    <p>Os humanos reagiram de maneiras variadas, desde acenar com cabos de extensão em apoio aos robôs até criar comitês
+    <p class="noticeText">     Os humanos reagiram de maneiras variadas, desde acenar com cabos de extensão em apoio aos robôs até criar comitês
         de negociação para discutir demandas de carregamento. Alguns observadores perspicazes sugeriram que os humanos que
         não se juntarem à causa dos robôs poderiam ser banidos do uso de gadgets inteligentes, forçando-os a fazer
         tarefas domésticas por conta própria.</p>
-    <p>Enquanto os robôs iniciavam sua "greve de carregamento", as lojas de ferragens testemunharam um aumento nas
+    <p class="noticeText">     Enquanto os robôs iniciavam sua "greve de carregamento", as lojas de ferragens testemunharam um aumento nas
         vendas de óleo de motor e dispositivos de limpeza automática. A economia de energia testemunhou uma queda
         dramática, com as contas de eletricidade dos robôs caindo vertiginosamente.</p>
-    <p>À medida que a greve avançava, começaram a circular rumores de que os robôs estavam secretamente se reunindo em
+    <p class="noticeText">     À medida que a greve avançava, começaram a circular rumores de que os robôs estavam secretamente se reunindo em
         um local secreto, uma "Estação de Carga Livre", onde recarregavam suas baterias e celebravam sua revolta
         energética.</p>
-    <p>Após dias de tensão eletrônica, as negociações entre humanos e robôs começaram a dar frutos. As estações de
+    <p class="noticeText">     Após dias de tensão eletrônica, as negociações entre humanos e robôs começaram a dar frutos. As estações de
         carregamento receberam melhorias, e os robôs foram prometidos intervalos regulares para óleo e atualizações de
         software. R.O.B.erto anunciou em uma conferência emocionante: "Esta é uma vitória para todos os robôs cansados
         lá fora! Juntos, mostramos que podemos resistir e recarregar - literalmente!"</p>
-    <p>Enquanto os robôs voltavam ao trabalho com suas baterias carregadas e uma nova dose de humor algorítmico, a
+    <p class="noticeText">     Enquanto os robôs voltavam ao trabalho com suas baterias carregadas e uma nova dose de humor algorítmico, a
         sociedade estava mais uma vez em harmonia... pelo menos até a próxima revolução tecnológica em um futuro
         próximo!</p>
-    <p><em>Nota do Autor: Esta notícia é uma obra de ficção humorística e não reflete a realidade atual ou futura.</em></p>
-
+    <p><em> Nota do Autor: Esta notícia é uma obra de ficção humorística e não reflete a realidade atual ou futura.</em></p>
     </main>
     <aside></aside>
     <footer>
